feat: maven (pom.xml), and doc